deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yes-links-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yes-links-api
  template:
    metadata:
      labels:
        app: yes-links-api
    spec:
      containers:
        - name: api
          image: yes-links:latest
          ports:
            - containerPort: 8000
