deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yes-links-api
spec:
  selector:
    app: yes-links-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
