deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yes-links-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - y.es
      secretName: yes-links-tls
  rules:
    - host: y.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yes-links-api
                port:
                  number: 80
